# opencv-framework

./: CMakeLists.txt  main.cpp
header/: dft.h
header/filter/: bandcut_filter.h  bandpass_filter.h  filter.h  high_pass_filter.h  ideal_filter.h  log_gabor_filter.h  low_pass_filter.h
header/pyramids/: gaussian_pyramid.h  laplacian_pyramid.h
src/: dft.cpp
src/filter/: bandcut_filter.cpp  bandpass_filter.cpp  filter.cpp  high_pass_filter.cpp  ideal_filter.cpp  log_gabor_filter.cpp  low_pass_filter.cpp
src/pyramids/: gaussian_pyramid.cpp  laplacian_pyramid.cpp
